--- a/basic-js/index.html
+++ b/basic-js/index.html
@@ -1,28 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-</head>
+  <body>
+    <div id="app"></div>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/jsx">
+      const app = document.getElementById('app');
 
-<body>
-  <div id="app">
+      function Header() {
+        return (<h1>Develop. Preview. Ship.</h1>);
+      }
 
-  </div>
-  <script type="text/javascript">
-    const app = document.getElementById('app');
-    const header = document.createElement('h1');
+      function HomePage() {
+        return (
+          <div>
+            <Header />
+          </div>
+        );
+      }
 
-    const text = 'Develop. Preview. Ship.';
-    const headerContent = document.createTextNode(text)
+      const root = ReactDOM.createRoot(app);
 
-    header.appendChild(headerContent);
-    app.appendChild(header);
-
-  </script>
-
-</body>
-
+      root.render(<HomePage />);
+    </script>
+  </body>
 </html>
