Display Data with Props

--- a/basic-js/index.html
+++ b/basic-js/index.html
@@ -14,14 +14,21 @@
     <script type="text/jsx">
       const app = document.getElementById('app');
 
-      function Header() {
-        return (<h1>Develop. Preview. Ship.</h1>);
+      function Header(props) {
+        return (<h1>{props.title}</h1>);
       }
 
       function HomePage() {
+        const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
+
         return (
           <div>
-            <Header />
+            <Header title="Develop. Preview. Ship." />
+            <ul>
+              {names.map((name) => (
+                <li key={name}>{name}</li>
+              ))}
+            </ul>
           </div>
         );
       }
