--- a/basic-js/index.html
+++ b/basic-js/index.html
@@ -21,6 +21,13 @@
       function HomePage() {
         const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
 
+        const [likes, setLikes] = React.useState(0);
+
+        function handleClick() {
+          console.log('increment like count');
+          setLikes(likes + 1)
+        }
+
         return (
           <div>
             <Header title="Develop. Preview. Ship." />
@@ -29,6 +36,7 @@
                 <li key={name}>{name}</li>
               ))}
             </ul>
+            <button onClick={handleClick}>Like ({likes})</button>
           </div>
         );
       }
